--- a/meta-tag-generator.css
+++ b/meta-tag-generator.css
@@ -10,6 +10,7 @@
   background-color: #EEF3FA;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
 }
 
 /* Label Styles */
@@ -32,6 +33,7 @@
   border-radius: 5px;
   font-size: 14px;
   background-color: #ffffff;
+  box-sizing: border-box;
 }
 
 .meta-tag-generator_input:focus, .meta-tag-generator_select:focus {
@@ -49,6 +51,7 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.5s ease;
+  box-sizing: border-box;
 }
 
 .meta-tag-generator_button:hover {
